# amanuensis

./: .env.example  .gitignore  .pre-commit-config.yaml  HISTORY.md  INVARIANTS.md  TASKS.md  amanuensis.yaml  handoff.md  pyproject.toml
.antigravitycli/: dd13dd80-3d07-4913-a5c5-79042b6cb18f.json
.github/workflows/: ci.yml
docs/: architecture.md  cli-reference.md  schema-reference.md  skill-author-guide.md  supervision-protocol.md
scripts/: __init__.py  migrate_clarifications_to_schema_v2.py
src/amanuensis/: __init__.py
tests/cli/: conftest.py  test_atom_cli.py  test_clarification.py  test_dispatch_cli.py  test_dispatch_routing.py  test_distill_cli.py  test_export.py  test_ingest_cli.py  test_init.py  test_install_skills.py  test_iteration.py  test_map_commands.py  test_map_connect_only.py  test_map_hierarchize_only.py  test_map_hierarchize_phase.py  test_map_probandum.py  test_map_relation.py  test_map_walton_scheme.py  test_marker_required.py  test_status.py  test_vocabulary.py
tests/dispatch/: conftest.py  test_cache_integration.py  test_cluster_enumeration.py  test_connect_cache_hit.py  test_connect_enqueue.py  test_connect_smoke.py  test_contested_warrant_clarification.py  test_cross_doc_reconcile.py  test_driver_replay_log_routing.py  test_echo_role_fixture.py  test_harness_detection.py  test_hierarchize_cache_hit.py  test_hierarchize_cluster_enumeration.py  test_hierarchize_enqueue.py  test_hierarchize_smoke.py  test_map_role_pair.py  test_orchestrator_skips_stub_roles.py  test_probandum_reconcile.py  test_queue_protocol.py  test_reconcile_map_audit.py  test_reconcile_map_no_op.py  test_reconcile_map_resolve.py  test_reconcile_role_parsing.py  test_reconciliation.py  test_retry_policy.py  test_role_write_isolation.py  test_run_hierarchize_phase.py
tests/docs/: test_cross_links.py  test_invariants_have_gate_tests.py
tests/e2e/: .gitignore  README.md  _fixture_builder.py  globalSetup.ts  package.json  playwright.config.ts  test_graph_state_persistence.spec.ts  test_map_resolution_clarification.spec.ts  test_phase1_graph_stress.spec.ts  test_phase1_smoke.spec.ts  test_phase2b_overlay_flow.spec.ts  test_phase2c_tree_flow.py  test_phase2c_tree_flow.spec.ts  test_playwright_runs.py  tsconfig.json
tests/export/: conftest.py  test_static_export_cross_doc.py  test_static_export_probandum.py  test_static_export_smoke.py  test_supersede_chain_walked.py
tests/fixtures/: INGEST_FALLBACKS.md
tests/fs/: conftest.py  test_atomic_writes.py  test_clarification_migration.py  test_concurrent_distill_blocked.py  test_concurrent_map_distill.py  test_cross_doc_relation_io.py  test_ensure_mappings_readme.py  test_entity_vocabulary_snapshot.py  test_marker_required.py  test_phase2a_errors_importable.py  test_probandum_edge_io.py  test_probandum_io.py  test_probandum_walton_gate.py  test_provenance_io.py  test_replay_log_concurrent.py  test_replay_log_dual_path.py  test_substrate_entity_io.py  test_substrate_enumerators.py  test_substrate_mappings_paths.py  test_substrate_paths.py  test_substrate_resolution_io.py  test_substrate_supersedes.py  test_supersede_chain.py  test_walton_scheme_snapshot.py
tests/ingest/: test_ingest_determinism.py  test_legal_pdf_fidelity.py  test_pdfplumber_fallback.py  test_simple_pdf.py
tests/integration/: test_distill_tiny_fixture.py  test_map_connect_end_to_end.py  test_map_end_to_end.py  test_phase2b_connect_end_to_end.py  test_phase2c_hierarchize_end_to_end.py
tests/invariants/: _types.py  conftest.py  test_closed_vocabulary.py  test_cross_doc_shared_entity.py  test_determinism_boundary.py  test_intra_doc_only.py  test_mappings_immutability.py  test_mappings_namespace_scoped.py  test_no_harness_files.py  test_probandum_alternatives.py  test_probandum_lineage.py  test_probandum_scheme.py  test_probandum_tree.py  test_provenance_completeness.py  test_resolution_uniqueness.py  test_vocabulary_pinned.py
tests/llm/: conftest.py  test_cache.py  test_replay_and_prov.py
tests/schemas/: conftest.py  test_agent_attribution.py  test_atom.py  test_clarification.py  test_content_addressing.py  test_cross_doc_relation.py  test_cross_doc_relation_supersede.py  test_entity.py  test_entity_supersede.py  test_iteration.py  test_module_exports.py  test_phase1_backward_compat.py  test_probandum.py  test_probandum_edge.py  test_probandum_edge_supersede.py  test_probandum_supersede.py  test_provenance.py  test_relation.py  test_replay_log.py  test_resolution.py  test_resolution_supersede.py  test_vocabulary.py
tests/skills/: test_map_audit_skill.py  test_map_resolve_skill.py  test_skill_frontmatter.py
(+188 files in other folders)
