[project]
name = "amanuensis"
version = "0.0.0"
description = "Agent-consumable workspace for document distillation, mapping, and grounded extension toward legal-quality submissions."
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
    { name = "David Schmidt", email = "dave@zdelta.dev" },
]

# M1.2 adds the foundational runtime deps. Future milestones will add:
# fastapi, uvicorn, jinja2, pdfplumber, prov, pytailwindcss (no Node
# toolchain), htmx-python helpers if any. uv resolves the lockfile.
# M3.1 adds docling for PDF ingest (source-mirror).
dependencies = [
    "pydantic>=2.9",
    "typer",
    "pyyaml",
    "structlog",
    "docling",
]

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "vulture>=2.11",
    "hypothesis",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amanuensis"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "invariants: tests that enforce INVARIANTS.md gates",
    "e2e: end-to-end tests (slow)",
]

[tool.vulture]
paths = ["src"]
min_confidence = 80
