[project]
name = "amanuensis"
version = "0.0.0"
description = "Agent-consumable workspace for document distillation, mapping, and grounded extension toward legal-quality submissions."
requires-python = ">=3.12,<3.14"
license = { text = "MIT" }
authors = [
    { name = "David Schmidt", email = "dave@zdelta.dev" },
]

# M1.2 adds the foundational runtime deps. Future milestones will add:
# prov, htmx-python helpers if any. uv resolves the lockfile.
# M3.1 adds docling for PDF ingest (source-mirror).
# M3.2 adds pdfplumber as the fallback ingest engine.
# M8.1 adds fastapi/uvicorn/jinja2/pytailwindcss for the local web app
# (read-only substrate browser + clarifications/iterations forms).
# pytailwindcss ships the Tailwind binary in a Python package — no
# Node toolchain required for the wheel build.
# M8.5 adds python-multipart so FastAPI can parse ``Form(...)`` bodies
# on the clarification-resolve and iteration-add POST endpoints.
dependencies = [
    "pydantic>=2.9",
    "typer",
    "pyyaml",
    "structlog",
    "docling",
    "pdfplumber",
    "fastapi",
    "uvicorn[standard]",
    "jinja2",
    "pytailwindcss",
    "python-multipart",
]

# M4.1 registers the CLI entry point so `amanuensis` resolves on PATH
# after `uv sync`. The Typer root app lives at `amanuensis.cli:app`.
[project.scripts]
amanuensis = "amanuensis.cli:app"

[dependency-groups]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5",
    "ruff>=0.6",
    "pyright>=1.1.380",
    "vulture>=2.11",
    "hypothesis",
]

[tool.uv]
package = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/amanuensis"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
]

[tool.pyright]
include = ["src", "tests"]
typeCheckingMode = "strict"
pythonVersion = "3.12"
# Typer's `Argument` / `Option` factory functions have heavily-overloaded
# signatures whose return type collapses to `Any` in pyright strict mode;
# every CLI command emits a flurry of `reportUnknownMemberType` /
# `reportUnknownVariableType` noise that hides real issues. The rest of
# the codebase passes strict mode; this knob trades one strict-mode rule
# project-wide to keep the CLI signal-to-noise usable. Re-evaluate when
# typer ships richer stubs.
reportUnknownMemberType = "none"
reportUnknownVariableType = "none"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers --strict-config"
markers = [
    "invariants: tests that enforce INVARIANTS.md gates",
    "e2e: end-to-end tests (slow)",
]

[tool.vulture]
paths = ["src"]
min_confidence = 80
